--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@ http://crossfire.real-time.com/images/princess_111.gif
 -->
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Simple Canvas Game</title>
-	</head>
-	<body>
-		<script src="js/game.js"></script>
-	</body>
+
+<head>
+	<meta charset="utf-8">
+	<title>Simple Canvas Game</title>
+</head>
+
+<body>
+	<div id="cvs"></div>
+	<script src="js/tools.js"></script>
+	<script src="js/game.js"></script>
+</body>
+
 </html>
